versioned_docs/version-0.1.1/intro.mdx
---
title: Introduction
sidebar_position: 1
---

import CardGrid from '@site/src/components/CardGrid/CardGrid';

# Introduction

Yumma CSS, created by [Renildo Pereira](https://rrenildopereiraa.github.io/renildo/), is a multipurpose CSS library that offers a diverse range of utility classes and components. These components include buttons, navigation bars, cards, and more, making UI development more straightforward and streamlined. Yumma CSS provides a comprehensive set of tools and functionalities to simplify development processes.

## Getting Started

Get ready to work with Yumma CSS and the tools that come with it:

<CardGrid
 cardData={[
    {
      icon: require('@site/static/img/homepage/components.png').default,
      title: 'Components',
      description: 'Explore our components to add buttons, navbars, cards, and other elements to your interface.',
      url: '/components'
    },
    {
      icon: require('@site/static/img/homepage/responsiveness.png').default,
      title: 'Responsiveness',
      description: 'Customize your design elements with the help of a responsive design system.',
      url: '/docs/fundamentals/layout/breakpoints'
    },
    {
      icon: require('@site/static/img/homepage/screencasts.png').default,
      title: 'Screencasts',
      description: 'Take a look at our screencasts to learn more about how to implement Yumma CSS in your applications.',
      url: 'https://www.youtube.com/@yummacss'
    },
 ]}
/>

## Installation

Are you a visual learner? Here it is our 1-minute [video tutorial](https://rrenildopereiraa.github.io/renildo/) on YouTube showing everything about Yumma CSS.

### Install via NPM

* Install the CSS library using npm by running the following command in the directory where your project is located:
npm install `yummacss`:

```bash
npm i yummacss
```

* In your HTML file's `<head>` section, add a `<head>` tag to include the compiled CSS file.

```html
<link rel="stylesheet" href="node_modules/yummacss/dist/yumma.css">
```

### Integrate via CDN

* Add a `<link>` tag to include the CSS library directly from the CDN in your HTML file's `<head>` section.

```html
<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/yummacss/dist/yumma.css" crossorigin="anonymous">
```

#### Minified CSS
For faster loading, you can also include the minified version of the CSS:

```html
<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/yummacss/public/css/yumma.min.css" crossorigin="anonymous">
```

### Stylesheet Options

Choose the stylesheet option that suits your needs:

- **`yumma.css`**: Use this option for improved readability.
- **`yumma.min.css`**: Use this option for faster loading.

## API

To display the Yumma CSS version in your console, import the following code snippet and call the `greet` function:

```js
const { greet } = require('./node_modules/yummacss/index');
```